workloads/assisted-teacher/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assisted-teacher-frontend
  namespace: assisted-teacher
  labels:
    app: assisted-teacher-frontend
spec:
  selector:
    app: assisted-teacher-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
